--- a/src/app/order/order/order.component.html
+++ b/src/app/order/order/order.component.html
@@ -25,7 +25,7 @@
             <div class="card text-white bg-info mb-3">
                 <div class="card-body">
                     <p class="card-text d-flex justify-content-around">
-                        <i class="fa fa-5x fa-sticky-note"></i><span class="statsNum">11</span>
+                        <i class="fa fa-5x fa-sticky-note"></i><span class="statsNum">{{totalItems(orders)}}</span>
                     </p>
                 </div>
             </div>
@@ -48,7 +48,8 @@
                 <div class="col">
                     <h5 class="card-title">Order Items</h5>
                     <ul class="list-group">
-                        <li class="list-group-item" *ngFor="let item of order.items">{{item.name}}</li>                    </ul>
+                        <li class="list-group-item" *ngFor="let item of order.items">{{item.name}}</li>   
+                    </ul>
                 </div>
             </div>
         </div>
